--- a/servicios_backend/src/main/resources/application.properties
+++ b/servicios_backend/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=servicios_backend
+spring.datasource.url=jdbc:postgresql://localhost:5432/CotizadorServicios
+spring.datasource.username=aministrador
+spring.datasource.password=root
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.devtools.add-properties=false
+
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
