--- a/servicios_backend/src/main/resources/application.properties
+++ b/servicios_backend/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.devtools.add-properties=false
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.boot.autoconfigure.web=DEBUG
