--- a/servicios_backend/pom.xml
+++ b/servicios_backend/pom.xml
@@ -78,6 +78,12 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.8.9</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+            <version>2.0.12</version>
+        </dependency>
     </dependencies>
 
     <build>
